226 翻转二叉树

--- a/source/_posts/定时器中的异步请求堆积如何解决？.md
+++ b/source/_posts/定时器中的异步请求堆积如何解决？.md
@@ -23,6 +23,7 @@ this.interval = setInterval(async () =# {
 ```
 假设ajax()请求的时间因为网络或者其他原因超过了5秒，定时器并不会等待其返回结果，而是依旧会进行下一次循环，这样的话，其实定时器和异步请求之间的时序并没有联系顺序也毫无规律，那么我们如何实现等本次ajax请求完毕之后等待一段时间之后再进行下一次循环呢？
 
+<!-- more -->
 ### 1.简单代码实现
 
 ```
